# RAG-DocumentQA

./: .gitignore  README.md  code_dev.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  run_cli.py  run_init.py  script_dev.ipynb  solution_development.ipynb  test.txt  tests.py
config/: config.py  manipulate_patterns.json  user_config.yml
docs/: search.js  src.html
docs/src/: app_helpers.html  communicators.html  data_processors.html  factories.html  tests.html  utils.html  vectorstore_handlers.html
docs/src/tests/: test_communicators.html  test_data_processors.html  test_factories.html  test_utils.html  test_vectorstore_handlers.html
notebooks/: demo_pipeline.ipynb  dev_RAG.ipynb  script_dev.ipynb
src/: __init__.py  app_helpers.py  communicators.py  data_processors.py  factories.py  helpers.py  utils.py  vectorstore_handlers.py
src/config/: config.py  manipulate_patterns.json  user_config.yml
src/tests/: test_communicators.py  test_data_processors.py  test_factories.py  test_utils.py  test_vectorstore_handlers.py
